# tree-sitter-bsl

./: README.md  grammar.js  package.json  pyproject.toml  tree-sitter.json
src/: grammar.json  node-types.json  parser.c
